feat: implemented Album managerment
